Terminando la clase media hora antes

--- a/dia04/requirements.txt
+++ b/dia04/requirements.txt
@@ -1,4 +1,8 @@
 #Para integrar python con firebase
-pyrebase
+pyrebase4
 #Para implementar web con python
 Flask
+#Para poder emplear variables de entorno
+python-dotenv
+#Para poder integrar flask con bootstrap
+flask-bootstrap
